# ru-en

./: AGENTS.md  README.md  pyproject.toml
.thoughts/research/: 20251210_Claude_Dictionaries  20251210_Gemini_Dictionaries
scripts/: download.sh
src/ru_en/: __init__.py
