[project]
name = "ru-en"
version = "0.1.0"
description = "Russian-to-English dictionary"
readme = "README.md"
authors = [
    { name = "Ian Walker-Sperber", email = "ianwsperber@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ru-en = "ru_en:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
